# GeoQA

./: .gitattributes  .gitignore  .vercelignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Marketing.md  NOTICE  README.md  SKILLS.md  codex_prompt.md  journal.md  plan_of_action.md  pyproject.toml  raw_problems_with_sources.json  requirements-dev.txt  requirements.txt  streamlit_app.py
docs/: CHANGELOG.md  START_HERE.md  api_policy.md  audit_archive.md  before_after_showcase.md  benchmark_story.md  checklist.md  dma_plugin_analysis.md  geoqa_atlas_product_brief.md  github_about.txt  local_data_tests.md  project_schedule.xlsx  release_checklist.md  security.md  solo_operator_guide.md  tests.md  user_guide.md
examples/: basic_usage.py  before_after_cleaning.py  geoqa_quickstart.ipynb  story_geoai_prep.py  thermal_guard_demo.py
geoai/: __init__.py  serialization.py
geoqa/: __init__.py  __main__.py  agent.py  api.py  audit_archive.py  conversion.py  execution.py  fixes.py  interactive_validation.py  problem_registry.py  profile_registry.py  qgis_export.py  runner.py  script_base.py  thermal.py  validation_runtime.py
scripts/: annotate_geoqa_scripts.py  run_integration_samples.py  validate_problem_catalog.py
tests/: test_accuracy_validation.py  test_additional_validations.py  test_agent.py  test_audit_archive.py  test_cli.py  test_conversion.py  test_execution.py  test_fixes_runtime.py  test_geoai_optional_layers.py  test_geoai_serialization.py  test_geometry_validation.py  test_layout_wrappers.py  test_ml.py  test_plugins_dma.py  test_problem_catalog.py  (+5 more)
(+179 files in other folders)
